[gd_scene load_steps=18 format=3 uid="uid://db30lgb0c6i0g"]

[ext_resource type="Theme" uid="uid://c6orqmnww3tlp" path="res://theme.tres" id="1_pkoy3"]
[ext_resource type="Shader" path="res://levels/vignette.gdshader" id="2_0831c"]
[ext_resource type="Texture2D" uid="uid://dhwmvrrpi24ay" path="res://assets/ui/crosshair001.png" id="3_i8x1x"]
[ext_resource type="Script" path="res://assets/ui/pause.gd" id="4_nruri"]
[ext_resource type="Texture2D" uid="uid://ew1qlups0njo" path="res://assets/ui/dialogue.png" id="5_tqf6x"]
[ext_resource type="Texture2D" uid="uid://bb5iemtk5xl8e" path="res://assets/ui/perspective.png" id="6_75ut2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s7s7t"]
shader = ExtResource("2_0831c")
shader_parameter/player_position = Vector2(0.5, 0.5)
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/MULTIPLIER = 1.0
shader_parameter/SCALE = 1.0
shader_parameter/SOFTNESS = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lgmdt"]
texture = ExtResource("5_tqf6x")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2k2bd"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
texture = ExtResource("6_75ut2")
modulate_color = Color(0.607843, 1, 1, 0.498039)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_74d6x"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
texture = ExtResource("6_75ut2")
modulate_color = Color(0.607843, 0.627451, 1, 0.498039)

[sub_resource type="Gradient" id="Gradient_kxw5t"]
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.498039)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uqehj"]
gradient = SubResource("Gradient_kxw5t")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bmk6a"]
texture = SubResource("GradientTexture2D_uqehj")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_syl2n"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_right = 3
corner_radius_bottom_right = 3
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1ec0"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ideb"]
bg_color = Color(1, 0.32416, 0.405474, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dek2"]
bg_color = Color(0, 0, 0, 0.247059)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.498039)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_pkoy3")

[node name="Vignette" type="ColorRect" parent="Container"]
material = SubResource("ShaderMaterial_s7s7t")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Crosshair" type="TextureRect" parent="Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_i8x1x")
metadata/_edit_lock_ = true

[node name="Transition" type="ColorRect" parent="Container"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Dialogue" type="Panel" parent="Container"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -141.0
offset_top = -113.0
offset_right = 141.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_lgmdt")

[node name="Author" type="RichTextLabel" parent="Container/Dialogue"]
clip_contents = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center][wave]You[/wave][/center]"
fit_content = true
scroll_active = false

[node name="Message" type="Label" parent="Container/Dialogue"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -88.0
offset_right = 110.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
text = "It's too heavy, i can't hold it!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Actions" type="HBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = 32.0
offset_right = 121.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Scale" type="Label" parent="Container/Actions"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_2k2bd")
text = "Scale"

[node name="Hold" type="Label" parent="Container/Actions"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_74d6x")
text = "Hold"

[node name="PauseMenu" type="Panel" parent="Container"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bmk6a")
script = ExtResource("4_nruri")

[node name="VBoxContainer" type="VBoxContainer" parent="Container/PauseMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -220.0
offset_right = 804.0
offset_bottom = -64.0
grow_vertical = 0

[node name="Label" type="Label" parent="Container/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game is paused"

[node name="GridContainer" type="GridContainer" parent="Container/PauseMenu/VBoxContainer"]
layout_mode = 2
columns = 6

[node name="Resume" type="Button" parent="Container/PauseMenu/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Resume"

[node name="RestartFloor" type="Button" parent="Container/PauseMenu/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Restart Floor"

[node name="MainMenu" type="Button" parent="Container/PauseMenu/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Main Menu"

[node name="Panel" type="Panel" parent="Container/PauseMenu/VBoxContainer/GridContainer"]
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="VSlider" type="VSlider" parent="Container/PauseMenu/VBoxContainer/GridContainer/Panel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_syl2n")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_f1ec0")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_1ideb")

[node name="VBoxContainer" type="VBoxContainer" parent="Container/PauseMenu/VBoxContainer/GridContainer/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 89.0
offset_bottom = 97.0

[node name="Label" type="Label" parent="Container/PauseMenu/VBoxContainer/GridContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Music Volume"
autowrap_mode = 3

[node name="Label2" type="Label" parent="Container/PauseMenu/VBoxContainer/GridContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "10"
horizontal_alignment = 2

[node name="Weight" type="Panel" parent="Container"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -157.0
offset_top = -44.0
offset_right = -38.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_5dek2")

[node name="Label" type="Label" parent="Container/Weight"]
layout_mode = 1
offset_left = 11.0
offset_top = -14.0
offset_right = 55.0
offset_bottom = 18.0
text = "80"

[connection signal="pressed" from="Container/PauseMenu/VBoxContainer/GridContainer/Resume" to="Container/PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="Container/PauseMenu/VBoxContainer/GridContainer/RestartFloor" to="Container/PauseMenu" method="_on_restart_floor_pressed"]
[connection signal="pressed" from="Container/PauseMenu/VBoxContainer/GridContainer/MainMenu" to="Container/PauseMenu" method="_on_main_menu_pressed"]
